test/scc/ext/tm/semantic-errors/017.t
void test()
{
    int a, b;
    _Atomic
        a = (volatile int)b;
}